--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script defrer src="PluralRules.js"></script>
     <script defrer src="RelativeTimeFormat.js"></script>
 
+    <script defrer src="CurrencyConverter.js"></script>
+
     <script defer src="Test.js"></script>
 
     <style>
@@ -738,6 +740,10 @@
         </div>
     </div>
 
+    <div class="wrapper">
+        <h4>Currency Converter</h4>
+        <currency-converter source="" target="">19</currency-converter>
+    </div>
 
 
     <div class="wrapper">
