--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 
         .row{
             margin: 5px 0;
+            padding: 0.525rem 0;
             display: flex;
             gap:20px;
+            border-bottom: 1px solid #ccc;
         }
 
         .auto{
@@ -859,8 +861,8 @@
         <div class="row">
             <div class="col-left auto">
                 <h4>Crypto Ticker</h4>
-                <crypto-ticker></crypto-ticker>
-                <crypto-ticker coins="cardano,eos,solana" currency="ils"></crypto-ticker>
+                <crypto-ticker style="background-color: #000;display: inline-flex;--cticker-font-size:2.2rem;"></crypto-ticker>
+                <crypto-ticker coins="cardano,eos,solana" currency="ils" style="display: block;background-color: #0085f2; border: 1px solid #ff9800;--cticker-color:#000;"></crypto-ticker>
             </div>
             <div class="auto notecard info accordion">
                 <div class="tab">
