ref index overview

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             color: #0085f2;
         }
         .wrapper{
-            margin: 20px;
+            max-width: 1600px;
+            margin: auto;
         }
 
         .notecard {
@@ -227,6 +228,64 @@
 <body style="--locale: en-US">
     <div>
         <h1>Web Components</h1>
+
+        <div class="wrapper">
+            <p>This is a <strong>Web Components Library</strong> showcasing modern, reusable custom HTML elements built with native web standards.</p>
+
+            <strong>Project Overview</strong>
+            <p>A comprehensive collection of 26+ custom web components organized into three main categories:</p>
+
+            <dl>
+            <dt> 🎯 Form Components</dt>
+            <dd>
+                <ul>
+                    <li><strong>Input Password</strong> - Password field with show/hide toggle</li>
+                    <li><strong>TextArea Count</strong> - Live character counter for textareas  </li>
+                    <li><strong>Input Knob</strong> - Circular range slider with touch/mouse/keyboard support</li>
+                    <li><strong>Signature Pad</strong> - Canvas-based signature capture with form integration</li>
+                    <li><strong>Popup Info</strong> - Accessible tooltip component</li>
+
+                </ul>
+            </dd>
+
+            <dt> 🌍 Internationalization Components</dt>
+            <dd>
+                <ul>
+                    <li><strong>Locale Selector</strong> - Language/region picker</li>
+                    <li><strong>Number/Currency/Date Formatters</strong> - Locale-aware data formatting</li>
+                    <li><strong>Duration/Relative Time</strong> - Time-based formatting</li>
+                    <li><strong>Plural Rules</strong> - Ordinal number formatting (1st, 2nd, 3rd...)</li>
+                </ul>
+            </dd>
+
+            <dt> 🔧 Widgets & Utilities</dt>
+            <dd>
+                <ul>
+                    <li><strong>Currency Converter</strong> - Live exchange rates</li>
+                    <li><strong>Weather Widget</strong> - Location-based weather display</li>
+                    <li><strong>Crypto Ticker</strong> - Animated cryptocurrency prices</li>
+                    <li><strong>Virtual Keyboard</strong> - Multi-language on-screen keyboard</li>
+                    <li><strong>GeoLocation</strong> - Browser location access</li>
+                    <li><strong>Breadcrumb Trail</strong> - Dynamic navigation breadcrumbs</li>
+                    <li><strong>Expanding List</strong> - Collapsible nested lists</li>
+                </ul>
+            </dd>
+            </dl>
+
+            <strong>Key Features</strong>
+
+            <ul>
+                <li>✅ <strong>Form-associated</strong> - Native form integration</li>
+                <li>✅ <strong>Accessible</strong> - ARIA support, keyboard navigation</li>
+                <li>✅ <strong>Encapsulated</strong> - Shadow DOM styling</li>
+                <li>✅ <strong>Reactive</strong> - Attribute change detection</li>
+                <li>✅ <strong>Modern</strong> - ES6+ classes, native APIs</li>
+                <li>✅ <strong>Demo Page</strong> - Interactive showcase with documentation</li>
+            </ul>
+
+            <p>Perfect for building modern, accessible web applications with reusable, standards-compliant components.</p>
+
+        </div>
         
         <div class="wrapper">
             <h3>Form compnents</h3>
