ref suggestion search. close suggestion on click outside

--- a/index.html
+++ b/index.html
@@ -1394,13 +1394,13 @@
 
         <div class="row">
             <div class="col-left auto">
-                <h4>Ip Info</h4>
+                <h4>IP Info</h4>
                 <client-ip></client-ip>
             </div>
             <div class="auto accordion">
                 <div class="tab notecard info">
-                    <input type="checkbox" name="accordion-2" id="cbgl1">
-                    <label for="cbgl1" class="tab__label">Ip Info</label>
+                    <input type="checkbox" name="accordion-2" id="ii1">
+                    <label for="ii1" class="tab__label">IP Info</label>
                     <div class="tab__content">
                         <div class="content">
                             <p>The `<client-ip>` web component displays the user's public IP address and related location information by fetching data from an external API (such as ipinfo.io). It is designed to be accessible, visually styled, and easy to integrate into any web page.</p>
