index update calendar

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                     <li><strong>Weather Widget</strong> - Location-based weather display</li>
                     <li><strong>Crypto Ticker</strong> - Animated cryptocurrency prices</li>
                     <li><strong>Virtual Keyboard</strong> - Multi-language on-screen keyboard</li>
+                    <li><strong>Calendar Picker</strong> - Date selection with a visual calendar</li>
                     <li><strong>IP Info</strong> - IP address geolocation information</li>
                     <li><strong>GeoLocation</strong> - Browser location access</li>
                     <li><strong>Breadcrumb Trail</strong> - Dynamic navigation breadcrumbs</li>
